[gd_scene load_steps=2 format=3 uid="uid://dys25t1j74fai"]

[ext_resource type="Script" path="res://09funciton_demo/GameForm.gd" id="1_gq4jj"]

[node name="GameFrom" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gq4jj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 264.0
offset_right = 648.0
offset_bottom = 336.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="labe_score" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_deduct" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 312.0
offset_top = 288.0
offset_right = 440.0
offset_bottom = 338.0
theme_override_font_sizes/font_size = 25
text = "-"

[node name="btn_add" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 664.0
offset_top = 288.0
offset_right = 792.0
offset_bottom = 338.0
theme_override_font_sizes/font_size = 25
text = "+"
